# application_agent

./: .env.example  .gitignore  AI_and_machine_Learning_engineer.md  CLAUDE.md  CV scoring Rubric.md  Dockerfile  EXPANSION_PLAN.md  FSP_job_desc.md  PRESENTATION.md  README.md  docker-compose.yml  pyproject.toml
data/: Cover letter scoring rubric.md  cover_letter.md
docs/: docker-setup.md  fixes.md  phase-1-docker-checklist.md  phase-2-ui-checklist.md
docs/plans/: 01_url_input.md  02_streaming_output.md  03_dry_run_mode.md  04_linkedin_integration.md  05_salary_benchmarking_agent.md  06_company_research_agent.md  07_skills_gap_learning_plan.md  08_docx_pdf_export.md  09_per_agent_model_config.md  10_interview_prep_agent.md  11_application_deduplication.md  12_prompt_version_tracking.md  13_threshold_auto_tuning.md  14_jd_deduplication.md  15_soft_gap_coverage_report.md  16_configurable_agent_pipeline.md  README.md
job_agent/: agents.py  batch.py  cli.py  config.py  cv_utils.py  jd_parser.py  loaders.py  models.py  pipeline.py  prompts.py  vault.py
job_descriptions/: Barclays_AI_Engineer.md  Barclays_AI_Engineer_Glasgow.md
job_descriptions/TODO/: Deel_Data_Scientist.md
job_descriptions/old/: Capco_ai_eng_lead.md  Euphoric_Software_Engineer_(Applied AI).md  MBN_Artificial_Intelligence_Engineer.md  MBN_Senior_Artificial_Intelligence_Engineer.md  Oliver_Bernars_AI_Engineer.md  Optima_Partners_Senior_Data_Scientist_ML_Engineer.md  (+7 more)
tests/: conftest.py  test_agents.py  test_batch.py  test_cv_utils.py  test_loaders.py  test_pipeline.py  test_vault.py
